django-issueinspector changelog
===============================


Unreleased
----------
+ Added ability to start as a standalone.


v0.1.0
------
+ Basic functionality.
